Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-8497

Docker parameter `name` does not work with Docker Containerizer.

Attach filesAttach ScreenshotVotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Mesosphere Sprint 76
    • 2

    Description

      When deploying a marathon app with Docker Containerizer (need to check Mesos Containerizer) and the parameter name set, Mesos is not able to recognize/control/kill the started container.

      Steps to reproduce 

      1. Deploy the below marathon app definition
      2.  Watch task being stuck in staging and mesos not being able to kill it/communicate with it
        1. e.g., Agent Logs: W0126 18:38:50.000000  4988 slave.cpp:6750] Failed to get resource statistics for executor ‘instana-agent.1a1f8d22-02c8-11e8-b607-923c3c523109’ of framework 41f1b534-5f9d-4b5e-bb74-a0e387d5739f-0001: Failed to run ‘docker -H unix:///var/run/docker.sock inspect mesos-1c6f894d-9a3e-408c-8146-47ebab2f28be’: exited with status 1; stderr=’Error: No such image, container or task: mesos-1c6f894d-9a3e-408c-8146-47ebab2f28be

      3. Check on node and see container running, but not being recognized by mesos
      {
      "id": "/docker-test",
      "instances": 1,
      "portDefinitions": [],
      "container": {
      "type": "DOCKER",
      "volumes": [],
      "docker": {
      "image": "ubuntu:16.04",
      "parameters": [
      {
      "key": "name",
      "value": "myname"
      }
      ]
      }
      },
      "cpus": 0.1,
      "mem": 128,
      "requirePorts": false,
      "networks": [],
      "healthChecks": [],
      "fetch": [],
      "constraints": [],
      "cmd": "sleep 1000"
      }
      
      

      Attachments

        1. master.log
          49 kB
          Jörg Schad
        2. agent.log
          28 kB
          Jörg Schad

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            qianzhang Qian Zhang
            js84 Jörg Schad
            Gilbert Song Gilbert Song
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Agile

                Completed Sprint:
                Mesosphere Sprint 76 ended 30/Mar/18
                View on Board

                Slack

                  Issue deployment