Made sure no `name` parameter exists in container's Docker info.

Setting `name` parameter in container's Docker info will cause Docker
containerizer cannot recognize the created Docker container, see
MESOS-8497 for details. So this patch disallows that during validation
stage.

Review: https://reviews.apache.org/r/65918/